gulpfile webserver and general announcements with firebase

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "foundation-sites": "~6.1.0",
     "motion-ui": "~1.1.0",
-    "jquery-ui": "^1.11.4"
+    "jquery-ui": "^1.11.4",
+    "firebase": "^2.4.1",
+    "foundation-icon-fonts": "*"
   },
   "ignore": [
     "**/.*",
