--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-webserver": "^0.9.1"
   },
   "scripts": {
     "start": "gulp",
